<resources>
    <string name="app_name">WaiUScheduler</string>
    <string name="title_timer">Timer</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_courses">Courses</string>
    <string name="title_calendar">Calendar</string>

    # Courses strings
    <string name="add_paper">Add New Paper</string>
    <string name="paper_code">Paper Code</string>
    <string name="paper_code_hint">Eg. COMPX576</string>
    <string name="occurrence_code">Occurrence Code</string>
    <string name="occurrence_code_hint">Eg. 26A</string>
    <string name="location">Location</string>
    <string name="radio_button_ham">HAM</string>
    <string name="radio_button_tga">TGA</string>
    <string name="radio_button_net">NET</string>
    <string name="search_button">Search Paper Outline</string>

    # Current paper strings
    <string name="current_paper">Current Papers</string>
    <string name="delete_paper">Delete Paper</string>
    <string name="paper_title">Paper Title</string>

    # Staff information
    <string name="staff_info">Staff Information</string>
    <string name="staff_name">Staff Name</string>
    <string name="staff_email">Staff Email</string>
    <string name="staff_position">Role</string>
    <string name="timer_start_btn_req">Add a course first to start timing</string>
    <string name="timer_select_paper">Select Paper *</string>
    <string name="timer_time_layout">00:00:00</string>
    <string name="timer_session_notes">Session Notes</string>
    <string name="timer_notes_hint">Take notes during your study session…</string>
    <string name="timer_start">Start</string>
    <string name="timer_reset">Reset</string>
    <string name="timer_stop">Stop</string>

    # Calendar fragment
    <string name="arrow_prev">&lt;</string>
    <string name="arrow_next">&gt;</string>
    <string name="today">Today</string>
    <string name="view_day">Day</string>
    <string name="view_week">Week</string>
    <string name="view_month">Month</string>
    <string name="day_sun">Sun</string>
    <string name="day_mon">Mon</string>
    <string name="day_tue">Tue</string>
    <string name="day_wed">Wed</string>
    <string name="day_thu">Thu</string>
    <string name="day_fri">Fri</string>
    <string name="day_sat">Sat</string>
    <string name="event_types">Event Types</string>
    <string name="filter_study">Study Sessions</string>
    <string name="filter_lecture">Lectures</string>
    <string name="filter_assignment">Assignments</string>
    <string name="save_grade">Save Grade</string>
    <string name="attendance">Attendance</string>
    <string name="attended">Attended</string>
    <string name="missed">Missed</string>
    <string name="save_attendance">Save Attendance</string>
    <string name="view_session">View Session</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="grade">Grade</string>
    <string name="e_g_85">e.g. 85</string>
    <string name="_100">/ 100</string>
    <string name="drop_down_arrow">Drop down arrow</string>
    <string name="icon_for_statistic">Icon for statistic</string>
    <string name="study_hours_by_course">Study Hours by Course</string>
    <string name="grades">Grades</string>
    <string name="upcoming_assessments">Upcoming Assessments</string>
    <string name="total_study_hours">Total Study Hours</string>
    <string name="average_grade">Average Grade</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="urgent">Urgent</string>
    <string name="enrolled_courses">Enrolled Courses</string>
    <string name="assessment_not_due">Assessment not due yet</string>

</resources>