<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calendar.CalendarFragment">

    <LinearLayout
        android:id="@+id/calendar_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/view_toggle">

        <Button
            android:id="@+id/button_prev"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:text="@string/arrow_prev"
            android:textSize="14sp"
            android:padding="0dp"/>

        <TextView
            android:id="@+id/text_month_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="April 2026"/>

        <Button
            android:id="@+id/button_today"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:text="@string/today"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:text="@string/arrow_next"
            android:textSize="14sp"
            android:padding="0dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_toggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/calendar_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/day_labels">


        <RadioButton
            android:id="@+id/radio_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_day"
            android:textSize="14sp" />


        <RadioButton
            android:id="@+id/radio_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_week"
            android:textSize="14sp" />


        <RadioButton
            android:id="@+id/radio_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_month"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/day_labels"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/view_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/calendar_grid">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day_sun"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day_mon"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day_tue"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day_wed"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day_thu"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day_fri"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day_sat"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/calendar_grid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/day_labels"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/event_filters">

        <GridView
            android:id="@+id/gridView_calendar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="7"
            android:verticalSpacing="2dp"
            android:horizontalSpacing="2dp"
            android:stretchMode="columnWidth" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/event_filters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/calendar_grid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/text_event_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_types"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginBottom="6dp" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">

            <Button
                android:id="@+id/button_filter_study"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_study"
                android:textSize="12sp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/button_filter_lecture"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_lecture"
                android:textSize="12sp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/button_filter_assignment"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_assignment"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>