<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="2dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/paperCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/paper_code"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/paperTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/paper_title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/paperOccurrence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:padding="2dp"
            android:text="@string/occurrence_code"
            android:textSize="14sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/paper_delete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delete_paper"
        android:src="@android:drawable/ic_delete" />

</LinearLayout>