<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center|center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/staff_paper_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/paper_code"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/staff_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:paddingHorizontal="4dp"
                android:text="@string/staff_name"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/staff_role"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/staff_position"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/staff_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:padding="4dp"
                android:paddingStart="4dp"
                android:text="@string/staff_email"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>